--- a/src/app/catalog/product/components/product-master/product-master.component.scss
+++ b/src/app/catalog/product/components/product-master/product-master.component.scss
@@ -30,6 +30,7 @@ app-theme-switcher {
 
 div.container {
   padding: 25px;
+  width: auto;
 }
 
 app-product {
