--- a/src/app/catalog/recommendation/components/recommendations/recommendations.component.scss
+++ b/src/app/catalog/recommendation/components/recommendations/recommendations.component.scss
@@ -20,6 +20,7 @@ h2 {
 
 div.container {
   padding: 25px;
+  width: auto;
 }
 
 app-recommendation {
